@@ -4,6 +4,11 @@
 
  Changes between 0.9.8b and 0.9.9  [xx XXX xxxx]
 
+  *) New functions EVP_Digest{Sign,Verify)*. These are enchance versions of
+     EVP_{Sign,Verify}* which allow an application to customise the signature
+     process.
+     [Steve Henson]
+
   *) New -resign option to smime utility. This adds one or more signers
      to an existing PKCS#7 signedData structure. Also -md option to use an
      alternative message digest algorithm for signing.
